# predict_Allegro-pol

./: .gitignore  .gitmodules  LICENSE  README.md  atomic.py  exec_host  info.py  pyproject.toml  requirements.txt  setup.py  test_model.py
allegro_pol/: __init__.py  _keys.py  _version.py  pol_loss.py
allegro_pol/nn/: __init__.py
code/: watch_pth.py
configs/: BaTiO3.yaml
data/: BaTiO3.xyz
data/BaTiO3_split/: split_data.py  test_data.xyz  train_val_data.xyz
lammps_infiles/: README.md
lammps_infiles/BaTiO3/finite_temp/: in.equilibrate  in.production
nequip_pol/: pol_loss.py
nequip_pol/model/: __init__.py  _allegro_pol.py
nequip_pol/nn/: _autograd.py  _sph.py
scripts/: README.md
scripts/1.CalculatorQE/: 1.CalculatorQE.py
scripts/2.ParseQE/: 2.ParseQE.py  README.md  parse_QE.py
scripts/3.Parity/: 3.Parity.py  README.md
scripts/4.Dielectric/: 4.Dielectric.py
scripts/5.Vibrational/: 5.Vibrational.py
scripts/6.Hysteresis/: 6.Hysteresis.py
scripts/7.Dipoles/: 7.Dipoles.py
scripts/8.CoerciveField/: 8.CoerciveField.py
scripts/9.Mobility/: 9.Mobility.py
scripts/calculator_QE/: README.md  calculator_QE.py
scripts/coercive_efield/: README.md  coercive_efield.py
scripts/combine_LAMMPS_restarts/: combine_lammps_restarts.py
scripts/dielectric_constant/: README.md  dielectric_constant.py
scripts/dipoles/: README.md  dipoles.py  dipoles_fast.py
scripts/hysteresis/: README.md  hysteresis.py
scripts/mobility_wall/: mobility_wall.py
scripts/parity_plot/: parity_plot.py
scripts/vibr_dielec_response/: README.md  vibr_dielec_response.py
(+241 files in other folders)
